2008-06-26  Philipp K Janert  <janert@ieee.org>
	
	* src/gp_types.h src/interpol.c src/plot2d.c src/tables.c 
	docs/gnuplot.doc: Changes for new smoothing algorithm for 
	smooth histograms using Gaussian kernel density estimates.
	
2008-06-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (term_start_plot): The term/README file clearly states that
	terminal coordinates run from 0 to xmax-1 and 0 to ymax-1.  Therefore
	[xmax,ymax] is out of range, and we should revise the clipping limits
	accordingly.  NB: This may change the behavior of existing scripts that
	draw to the extreme edge of the canvas (e.g. border=0).
	Bugfix:  Prevents tripping the assert() statements in emf.trm

2008-06-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph): Don't forget to draw a polyline even
	if it has only a single segment.
	Bugfix

2008-06-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c (draw_inside_color_smooth_box_postscript): Fix colour of
	the 2nd box in the colour box for negative palette in postscript
	output.
	SF Bug #2000751

2008-06-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c: Plot with vectors did not honor linestyles requested via
	'set style increment user'.

2008-06-20  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (delete_linestyle) src/unset.c src/setshow.h:
	Pass the head of the linestyle list as a parameter rather than
	hardcoding it to always be the list headed by first_linestyle.
	Remove unused routine assign_linestyle_tag().

	* src/misc.c src/misc.h src/term.c (lp_use_property):
	Move this routine from misc.c to term.c.  This cleans up a botched
	header dependency (the prototype was already in term_api.h rather than
	being in misc.h).

2008-06-19  Ethan Merritt  <merritt@u.washington.edu>

	* term/aquaterm.trm (AQUA_init AQUA_boxfill AQUA_filled_polygon):
	Query aquaterm for alpha channel support; use it if present.
	Add fill styles to the filled polygon routine.
